Traducao do termo Payment Modes

--- a/modulos/localbr/br_account_payment/views/payment_mode.xml
+++ b/modulos/localbr/br_account_payment/views/payment_mode.xml
@@ -27,7 +27,7 @@
         <field name="name">payment.mode.tree</field>
         <field name="model">payment.mode</field>
         <field name="arch" type="xml">
-            <tree string="Payment Modes">
+            <tree string="Modos de Pagamento">
                 <field name="name"/>
                 <field name="bank_account_id"/>
                 <field name="company_id" groups="base.group_multi_company"/>
@@ -36,7 +36,7 @@
     </record>
 
     <record id="account_payment_mode_action" model="ir.actions.act_window">
-        <field name="name">Payment Modes</field>
+        <field name="name">Modos de Pagamento</field>
         <field name="res_model">payment.mode</field>
         <field name="view_mode">tree,form</field>
     </record>
