--- a/modulos/contabil/account_payment_partner/views/report_invoice.xml
+++ b/modulos/contabil/account_payment_partner/views/report_invoice.xml
@@ -8,7 +8,7 @@
                 <span t-field="o.payment_mode_id.note" />
             </p>
             <p t-if="o.partner_bank_id">
-                <strong>Bank Account:</strong>
+                <strong>Conta Bancária:</strong>
                 <t t-if="o.partner_bank_id.bank_id">
                     <t t-esc="o.partner_bank_id.bank_id.name + ('' if not o.partner_bank_id.bank_id.bic else ' (' + o.partner_bank_id.bank_id.bic + ')')" />
                 </t>
