--- a/modulos/contabil/account/views/report_journal.xml
+++ b/modulos/contabil/account/views/report_journal.xml
@@ -78,7 +78,7 @@
                                 <thead>
                                     <tr><th colspan="3">Tax Declaration</th></tr>
                                     <tr>
-                                        <th>Name</th>
+                                        <th>Nome</th>
                                         <th>Base Amount</th>
                                         <th>Tax Amount</th>
                                     </tr>
