--- a/modulos/projeto/project/views/res_partner_views.xml
+++ b/modulos/projeto/project/views/res_partner_views.xml
@@ -13,7 +13,7 @@
                     <button class="oe_stat_button" type="action" name="%(project_task_action_from_partner)d"
                         context="{'search_default_partner_id': active_id, 'default_partner_id': active_id}" attrs="{'invisible': [('task_count', '=', 0)]}"
                         icon="fa-tasks">
-                        <field  string="Tasks" name="task_count" widget="statinfo"/>
+                        <field  string="Tarefas" name="task_count" widget="statinfo"/>
                     </button>
                 </button>
             </field>
