Restore commit 7977659e503dc30c4da0b9b30421c53666973739

--- a/modulos/projeto/project/views/project_views.xml
+++ b/modulos/projeto/project/views/project_views.xml
@@ -20,8 +20,8 @@
             <field name="name">project.task.search.form</field>
             <field name="model">project.task</field>
             <field name="arch" type="xml">
-               <search string="Tarefas">
-                    <field name="name" string="Tarefas"/>
+               <search string="Tasks">
+                    <field name="name" string="Tasks"/>
                     <field name="tag_ids"/>
                     <field name="partner_id"/>
                     <field name="project_id"/>
@@ -101,7 +101,7 @@
                         </button>
                         <button class="oe_stat_button" type="action"
                             name="%(act_project_project_2_project_task_all)d" icon="fa-tasks">
-                            <field string="Tarefas" name="task_count" widget="statinfo" options="{'label_field': 'label_tasks'}"/>
+                            <field string="Tasks" name="task_count" widget="statinfo" options="{'label_field': 'label_tasks'}"/>
                         </button>
                         <button name="toggle_active" type="object"
                                 confirm="(Un)archiving a project automatically (un)archives its tasks and issues. Do you want to proceed?"
@@ -557,7 +557,7 @@
             <field name="model">project.task</field>
             <field eval="2" name="priority"/>
             <field name="arch" type="xml">
-                <tree decoration-bf="message_needaction==True" decoration-danger="date_deadline and (date_deadline&lt;current_date)" string="Tarefas">
+                <tree decoration-bf="message_needaction==True" decoration-danger="date_deadline and (date_deadline&lt;current_date)" string="Tasks">
                     <field name="message_needaction" invisible="1"/>
                     <field name="sequence" invisible="not context.get('seq_visible', False)"/>
                     <field name="name"/>
@@ -589,7 +589,7 @@
             <field name="model">project.task</field>
             <field eval="2" name="priority"/>
             <field name="arch" type="xml">
-                <calendar date_start="date_deadline" string="Tarefas" mode="month" color="user_id">
+                <calendar date_start="date_deadline" string="Tasks" mode="month" color="user_id">
                     <field name="name"/>
                 </calendar>
             </field>
