--- a/modulos/contabil/account/views/report_financial.xml
+++ b/modulos/contabil/account/views/report_financial.xml
@@ -26,7 +26,7 @@
                     <table class="table table-condensed" t-if="data['debit_credit'] == 1">
                         <thead>
                             <tr>
-                                <th>Nome</th>
+                                <th>Name</th>
                                 <th class="text-right">Debit</th>
                                 <th class="text-right">Credit</th>
                                 <th class="text-right">Balance</th>
@@ -59,7 +59,7 @@
                     <table class="table table-condensed" t-if="not data['enable_filter'] and not data['debit_credit']">
                         <thead>
                             <tr>
-                                <th>Nome</th>
+                                <th>Name</th>
                                 <th class="text-right">Balance</th>
                             </tr>
                         </thead>
@@ -82,7 +82,7 @@
                     <table class="table table-condensed" t-if="data['enable_filter'] == 1 and not data['debit_credit']">
                         <thead>
                             <tr>
-                                <th>Nome</th>
+                                <th>Name</th>
                                 <th class="text-right">Balance</th>
                                 <th class="text-right"><span t-esc="data['label_filter']"/></th>
                             </tr>
