--- a/modulos/comercial/contacts/views/contact_views.xml
+++ b/modulos/comercial/contacts/views/contact_views.xml
@@ -17,9 +17,9 @@
           </p>
         </field>
     </record>
-    <record id="action_contacts_view_form" model="ir.actions.act_window.view">
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="base.view_partner_form"/>
+    <record id="action_contacts_view_tree" model="ir.actions.act_window.view">
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="base.view_partner_tree"/>
         <field name="act_window_id" ref="action_contacts"/>
     </record>
 
